--- a/package.json
+++ b/package.json
@@ -7,10 +7,7 @@
   "scripts": {
     "start": "node server.js",
     "server": "nodemon server.js",
-    "client:build": "npm run build --prefix ./client",
-    "client:start": "npm run start --prefix ./client",
-    "build": "npm run client:build && npm run build:server",
-    "build:server": "npm run ", 
+    "build": "npm install --prefix ./client && npm run build --prefix  ./client && npm install",
     "dev": "concurrently \"npm run start\" \"npm run client:start\""
   },  
   "keywords": [],
