--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node server.js",
     "server": "nodemon server.js",
-    "build": "npm install --prefix ./client && npm run build --prefix  ./client && npm install",
+    "build": "npm start",
     "dev": "concurrently \"npm run start\" \"npm run client:start\""
   },  
   "keywords": [],
