--- a/server/package.json
+++ b/server/package.json
@@ -7,10 +7,9 @@
   "scripts": {
     "start": "node server.js",
     "server": "nodemon server.js",
-    "build": "npm run build",
-    "dev": "concurrently \"npm run start\" \"npm run client:start\""
-  }
-,  
+    "dev": "concurrently \"npm run start\" \"npm run client:start\"",
+    "build": "echo 'No build step required for backend application'"
+  },
   "keywords": [],
   "author": "Chandrakant Tiwari",
   "license": "MIT",
@@ -32,8 +31,6 @@
     "otp": "^1.1.2",
     "otp-gen-agent": "^1.1.2",
     "otp-generator": "^4.0.1",
-    "react-cookie": "^7.0.2",
     "slugify": "^1.6.6"
   }
 }
-
